--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,10 +1,13 @@
-import = ["/Users/jobstoit/.config/alacritty/catppuccin/catppuccin-macchiato.toml"]
+import = [
+  #"/Users/jobstoit/.config/alacritty/catppuccin/catppuccin-macchiato.toml",
+  "/Users/jobstoit/.config/alacritty/catppuccin/catppuccin-mocha.toml",
+]
 
 [env]
 TERM = "xterm-256color"
 
 [window]
-opacity = 0.85
+opacity = 0.90
 blur = true
 padding = { x = 0, y = 0 }
 decorations = "Buttonless"
