--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,13 +32,16 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Theming
+set -g @catppuccin_date_time_text "%H:%M"
+set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_flavour 'mocha'
 #set -g @catppuccin_flavour 'macchiato'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
