--- a/.config/k9s/clusters/boundary-complero/kubernetes-admin@cc01/config.yaml
+++ b/.config/k9s/clusters/boundary-complero/kubernetes-admin@cc01/config.yaml
@@ -6,12 +6,11 @@ k9s:
     favorites:
     - all
     - prod
-    - velero
-    - mogenius
-    - auxiliary
     - dev
+    - auxiliary
+    - kube-system
   view:
-    active: deploy
+    active: context
   featureGates:
     nodeShell: false
   portForwardAddress: localhost
