--- a/.config/k9s/clusters/cc01/mogenius/config.yaml
+++ b/.config/k9s/clusters/cc01/mogenius/config.yaml
@@ -1,15 +1,10 @@
 k9s:
   cluster: cc01
   namespace:
-    active: all
+    active: default
     lockFavorites: false
     favorites:
-    - all
-    - prod
-    - auxiliary
-    - kube-system
-    - velero
-    - dev
+    - default
   view:
     active: pod
   featureGates:
