chore: set configuration

--- a/.config/k9s/clusters/boundary-complero/boundary-complero/config.yaml
+++ b/.config/k9s/clusters/boundary-complero/boundary-complero/config.yaml
@@ -6,12 +6,12 @@ k9s:
     favorites:
     - all
     - prod
+    - auxiliary
     - velero
     - mogenius
-    - auxiliary
     - dev
   view:
-    active: deploy
+    active: pod
   featureGates:
     nodeShell: false
   portForwardAddress: localhost
