--- a/.config/k9s/clusters/boundary-complero/boundary-complero/config.yaml
+++ b/.config/k9s/clusters/boundary-complero/boundary-complero/config.yaml
@@ -11,7 +11,7 @@ k9s:
       - auxiliary
       - dev
   view:
-    active: contexts
+    active: v1/pods all
   featureGates:
     nodeShell: false
   proxy: null
